fix: correct type for currentTrack in RhythmGameProps

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-# !STARTERCONF Duplicate this to .env.local
-
-# DEVELOPMENT TOOLS
-# Ideally, don't add them to production deployment envs
-# !STARTERCONF Change to true if you want to log data
-NEXT_PUBLIC_SHOW_LOGGER="false"
+SPOTIFY_CLIENT_ID=your_client_id
+SPOTIFY_CLIENT_SECRET=your_client_secret
+SPOTIFY_REDIRECT_URI=http://localhost:3000/callback
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your_nextauth_secret
