--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-nextjs-tailwind-starter",
+  "name": "tapclickfy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,10 +20,14 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "lucide-react": "^0.438.0",
-    "next": "^15.4.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next": "14.2.3",
+    "next-auth": "5.0.0-beta.29",
+    "nextra": "^3.2.1",
+    "nextra-theme-docs": "^3.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "spotify-web-api-node": "^5.0.2",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1"
   },
@@ -35,8 +39,12 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^15.0.7",
-    "@types/react": "^19.1.8",
-    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "@types/spotify-web-playback-sdk": "^0.1.19",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
@@ -54,7 +62,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.8.3"
+    "typescript": "^5.4.5"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
